Add Upload Error and Progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
   <string name="unclassified">Unclassified</string>
   <string name="choose_dataset">Choose…</string>
   <string name="dataset_label">Dataset:</string>
+  <string name="uploading_image">Uploading Image</string>
 </resources>
